# brain-theory-project

./: .gitignore  README.md  pyproject.toml
configs/: full.toml  quick.toml
src/etam_mnist/: __init__.py  cli.py  config.py  connectivity.py  data.py  evaluation.py  model.py  pipeline.py  templates.py
tests/: test_connectivity.py  test_data.py  test_model.py  test_pipeline.py  test_templates.py
